{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 205,
  "lineage": "725a6d2b-fff7-75b7-c5c9-99979ba87690",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_elb",
      "name": "ubuntu_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:839821061981:loadbalancer/nginxLB",
            "availability_zones": [
              "eu-central-1a",
              "eu-central-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "nginxLB-562018167.eu-central-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8090/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "nginxLB",
            "idle_timeout": 100,
            "instances": [
              "i-046924ec40b1e64dd",
              "i-07d4d9b29754ce87a"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8090,
                "instance_protocol": "TCP",
                "lb_port": 8000,
                "lb_protocol": "TCP"
              }
            ],
            "name": "nginxLB",
            "security_groups": [
              "sg-07efc2911bf3b8f8e"
            ],
            "source_security_group": "839821061981/allow ssh and http",
            "source_security_group_id": "sg-07efc2911bf3b8f8e",
            "subnets": [
              "subnet-0c13bd30804cc72d3",
              "subnet-0c743e441efa9b3dc"
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "nginxLB",
              "Owner": "gru minion",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "nginxLB",
              "Owner": "gru minion",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.external.myipaddr",
            "module.compute.aws_instance.ubuntu",
            "module.compute.data.template_file.nginx_srv",
            "module.network.aws_security_group.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.tls.aws_key_pair.generated_key",
            "module.tls.tls_private_key.ssh_private_key"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ec7f9846da6b0f61",
            "arn": "arn:aws:ec2:eu-central-1:839821061981:instance/i-046924ec40b1e64dd",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-046924ec40b1e64dd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp-one",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0138259605ff3350a",
            "private_dns": "ip-10-0-8-237.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.8.237",
            "public_dns": "ec2-18-192-213-159.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.192.213.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05ec17077e705be47",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c743e441efa9b3dc",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "ubuntu-0",
              "Owner": "gru minion",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "ubuntu-0",
              "Owner": "gru minion",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07efc2911bf3b8f8e"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.external.myipaddr",
            "module.compute.data.template_file.nginx_srv",
            "module.network.aws_security_group.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.tls.aws_key_pair.generated_key",
            "module.tls.tls_private_key.ssh_private_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ec7f9846da6b0f61",
            "arn": "arn:aws:ec2:eu-central-1:839821061981:instance/i-07d4d9b29754ce87a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d4d9b29754ce87a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp-one",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0273f83a3bc6badad",
            "private_dns": "ip-10-0-27-6.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.27.6",
            "public_dns": "ec2-3-120-131-223.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.120.131.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-004db81e8097b255f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c13bd30804cc72d3",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "ubuntu-1",
              "Owner": "gru minion",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "ubuntu-1",
              "Owner": "gru minion",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07efc2911bf3b8f8e"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.external.myipaddr",
            "module.compute.data.template_file.nginx_srv",
            "module.network.aws_security_group.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.tls.aws_key_pair.generated_key",
            "module.tls.tls_private_key.ssh_private_key"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:internet-gateway/igw-0eed740924b47de34",
            "id": "igw-0eed740924b47de34",
            "owner_id": "839821061981",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "main_gw",
              "Owner": "gru minion",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "main_gw",
              "Owner": "gru minion",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "vpc_id": "vpc-026a3ce569a574244"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.tls.aws_key_pair.generated_key",
            "module.tls.tls_private_key.ssh_private_key"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df2aecc6c9be8122",
            "original_route_table_id": "rtb-02e11c7528d3479e8",
            "route_table_id": "rtb-06c5b1c70575bef37",
            "vpc_id": "vpc-026a3ce569a574244"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.main",
            "module.network.aws_vpc.main",
            "module.tls.aws_key_pair.generated_key",
            "module.tls.tls_private_key.ssh_private_key"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:route-table/rtb-06c5b1c70575bef37",
            "id": "rtb-06c5b1c70575bef37",
            "owner_id": "839821061981",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eed740924b47de34",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "main_rt",
              "Owner": "gru minion",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "main_rt",
              "Owner": "gru minion",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "timeouts": null,
            "vpc_id": "vpc-026a3ce569a574244"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.main",
            "module.tls.aws_key_pair.generated_key",
            "module.tls.tls_private_key.ssh_private_key"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09640602aaf09d9e9",
            "route_table_id": "rtb-06c5b1c70575bef37",
            "subnet_id": "subnet-0c743e441efa9b3dc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.tls.aws_key_pair.generated_key",
            "module.tls.tls_private_key.ssh_private_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037cec121453ed44a",
            "route_table_id": "rtb-06c5b1c70575bef37",
            "subnet_id": "subnet-0c13bd30804cc72d3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.tls.aws_key_pair.generated_key",
            "module.tls.tls_private_key.ssh_private_key"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:security-group/sg-07efc2911bf3b8f8e",
            "description": "SSH on port 22 and HTTP on port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07efc2911bf3b8f8e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow ssh to instances",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "for elb access to instances",
                "from_port": 8090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8090
              },
              {
                "cidr_blocks": [
                  "147.235.202.118/32"
                ],
                "description": "allow all traffic to instances \u0026 elb from user local machine",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow ssh and http",
            "name_prefix": "",
            "owner_id": "839821061981",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-026a3ce569a574244"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.external.myipaddr",
            "module.network.aws_vpc.main",
            "module.tls.aws_key_pair.generated_key",
            "module.tls.tls_private_key.ssh_private_key"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:subnet/subnet-0075f37000edb5aaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0075f37000edb5aaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "839821061981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "private_sb0",
              "Owner": "gru minion",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "private_sb0",
              "Owner": "gru minion",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "vpc_id": "vpc-026a3ce569a574244"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.tls.aws_key_pair.generated_key",
            "module.tls.tls_private_key.ssh_private_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:subnet/subnet-0d9f485d48f5aa372",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9f485d48f5aa372",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "839821061981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "private_sb1",
              "Owner": "gru minion",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "private_sb1",
              "Owner": "gru minion",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "vpc_id": "vpc-026a3ce569a574244"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.tls.aws_key_pair.generated_key",
            "module.tls.tls_private_key.ssh_private_key"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:subnet/subnet-0c743e441efa9b3dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c743e441efa9b3dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839821061981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "public_sb0",
              "Owner": "gru minion",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "public_sb0",
              "Owner": "gru minion",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "vpc_id": "vpc-026a3ce569a574244"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_vpc.main",
            "module.tls.aws_key_pair.generated_key",
            "module.tls.tls_private_key.ssh_private_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:subnet/subnet-0c13bd30804cc72d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c13bd30804cc72d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839821061981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "public_sb1",
              "Owner": "gru minion",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "public_sb1",
              "Owner": "gru minion",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "vpc_id": "vpc-026a3ce569a574244"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_vpc.main",
            "module.tls.aws_key_pair.generated_key",
            "module.tls.tls_private_key.ssh_private_key"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:vpc/vpc-026a3ce569a574244",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02e39e1e50ba0bd46",
            "default_route_table_id": "rtb-02e11c7528d3479e8",
            "default_security_group_id": "sg-02f32b4fc66ea4bde",
            "dhcp_options_id": "dopt-0313a64657c4e833a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-026a3ce569a574244",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02e11c7528d3479e8",
            "owner_id": "839821061981",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "vpc-1",
              "Owner": "gru minion",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "vpc-1",
              "Owner": "gru minion",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            }
          },
          "dependencies": [
            "module.tls.aws_key_pair.generated_key",
            "module.tls.tls_private_key.ssh_private_key"
          ]
        }
      ]
    }
  ]
}